New resume, small bug fixes.

--- a/src/assets/scss/base/_index.scss
+++ b/src/assets/scss/base/_index.scss
@@ -8,11 +8,11 @@
   }
 }
 
-main > .h-screen {
+/* main > .h-screen {
   @media (max-width: 767px) {
     height: calc(100vh - 4.25rem);
   }
-}
+} */
 
 // Bio section
 .bio-images {
